# rs-matter

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  banner.txt  chip-tool-tests.sh  devenv.nix  devenv.yaml  sdkconfig.defaults  setup_device.sh  shell.nix  test.sh
bloat-check/: Cargo.toml  README.md  build.rs  memory-rp0.x
bloat-check/.cargo/: config.toml
examples/: Cargo.toml  README.md
examples/dimmable_light/src/: dev_att.rs  main.rs
examples/onoff_light w_callbacks/src/: main.rs
examples/onoff_light/src/: dev_att.rs  main.rs
examples/onoff_light_bt/src/: comm.rs  main.rs
examples/speaker/src/: dev_att.rs  lib.rs  main.rs  speaker.rs
examples/src/common/: args.rs  comm.rs  mdns.rs
examples/window_covering/src/: README.md  dev_att.rs  main.rs
matter/: Cargo.toml  build.rs
matter-data-model-codegen/: Cargo.toml  README.md
matter-data-model-codegen/src/: lib.rs
matter-idl-parser/: Cargo.toml  README.md  coverage.sh
matter-idl-parser/benches/: client-clusters-criterion.rs  client-clusters.rs
matter-idl-parser/examples/: file_parser.rs
matter-idl-parser/src/: lib.rs
matter/src/: acl.rs  core.rs  error.rs  fabric.rs  group_keys.rs  lib.rs  mdns.rs  pairing.rs  persist.rs
matter/src/cert/: asn1_writer.rs  mod.rs  printer.rs
matter/src/codec/: base38.rs  mod.rs
matter/src/crypto/: crypto_dummy.rs  crypto_esp_mbedtls.rs  crypto_mbedtls.rs  crypto_openssl.rs  crypto_rustcrypto.rs  mod.rs
matter/src/data_model/: cluster_basic_information.rs  cluster_level_control.rs  cluster_media_playback.rs  cluster_on_off.rs  cluster_template.rs  core.rs  device_types.rs  mod.rs  root_endpoint.rs
matter/src/interaction_model/: command.rs  core.rs  messages.rs  mod.rs  read.rs  subscribe.rs  write.rs
matter/src/mdns/: astro.rs  builtin.rs
matter/src/pairing/: code.rs  mod.rs  qr.rs  vendor_identifiers.rs
matter/src/secure_channel/: case.rs  common.rs  core.rs  crypto.rs  crypto_dummy.rs  crypto_esp_mbedtls.rs  crypto_mbedtls.rs  crypto_openssl.rs  crypto_rustcrypto.rs  mod.rs  pake.rs  spake2p.rs  status_report.rs
matter/src/sys/: mod.rs  posix.rs  sys_espidf.rs  sys_linux.rs  sys_macos.rs
matter/src/tlv/: mod.rs  parser.rs  traits.rs  writer.rs
matter/src/transport/: core.rs  dedup.rs  exchange.rs  mgr.rs  mod.rs  mrp.rs  network.rs  packet.rs  pipe.rs  plain_hdr.rs  proto_ctx.rs  proto_demux.rs  proto_hdr.rs  queue.rs  runner.rs  session.rs  udp.rs
matter/src/utils/: epoch.rs  mod.rs  parsebuf.rs  rand.rs  select.rs  writebuf.rs
matter/tests/: data_model_tests.rs  interaction_model.rs
matter/tests/common/: attributes.rs  commands.rs  echo_cluster.rs  handlers.rs  im_engine.rs  mod.rs
matter/tests/data_model/: acl_and_dataver.rs  attribute_lists.rs  attributes.rs  commands.rs  long_reads.rs  timed_requests.rs
rs-matter/: Cargo.toml  README.md  build.rs
rs-matter-codegen/: Cargo.toml  README.md
rs-matter-codegen/src/: idl.rs  lib.rs
rs-matter-codegen/src/idl/: bitmap.rs  client.rs  cluster.rs  enumeration.rs  event.rs  field.rs  handler.rs  id.rs  parser.rs  struct_in.rs  struct_out.rs
rs-matter-data-model/: Cargo.toml  README.md
rs-matter-data-model/benches/: client-clusters-criterion.rs  client-clusters.rs
rs-matter-data-model/examples/: file_parser.rs
rs-matter-data-model/src/: endpoint_composition.rs  idl.rs  lib.rs
rs-matter-macros/: Cargo.toml  README.md
rs-matter-macros-impl/: Cargo.toml  README.md
rs-matter-macros-impl/src/: idl.rs  lib.rs  tlv.rs
rs-matter-macros-impl/src/idl/: bitmap.rs  cluster.rs  enumeration.rs  field.rs  handler.rs  id.rs  struct_in.rs  struct_out.rs
rs-matter-macros/benches/: client-clusters-criterion.rs  client-clusters.rs
rs-matter-macros/src/: idl.rs  lib.rs  tlv.rs
rs-matter-macros/src/idl/: bitmap.rs  cluster.rs  enumeration.rs  field.rs  handler.rs  id.rs  parser.rs  struct_in.rs  struct_out.rs
rs-matter/src/: acl.rs  attest.rs  bdx.rs  cert.rs  commissioner.rs  core.rs  credentials.rs  crypto.rs  dm.rs  error.rs  fabric.rs  failsafe.rs  fmt.rs  group_keys.rs  im.rs  lib.rs  mdns.rs  onboard.rs  pairing.rs  persist.rs  respond.rs  sc.rs  sync.rs  test_device.rs  tlv.rs  transport.rs  utils.rs
rs-matter/src/attest/: cd.rs  cd_keys.rs  trust_store.rs
rs-matter/src/bdx/: block.rs  handler.rs  init.rs  nego.rs  read.rs  server.rs  write.rs
rs-matter/src/cert/: asn1_writer.rs  builder.rs  csr.rs  der_utils.rs  gen.rs  mod.rs  printer.rs  x509.rs
rs-matter/src/codec/: base38.rs
rs-matter/src/commissioner/: ca_chain.rs  fabric_credentials.rs  ipk.rs  noc_generator.rs
rs-matter/src/controller/: commissioner.rs  error.rs  mod.rs  setup_code.rs
rs-matter/src/credentials/: cd.rs  cd_keys.rs  test_paa.rs  trust_store.rs  trust_store_file.rs
rs-matter/src/crypto/: backend.rs  canon.rs  crypto_dummy.rs  crypto_esp_mbedtls.rs  crypto_mbedtls.rs  crypto_openssl.rs  crypto_rustcrypto.rs  dummy.rs  esp_mbedtls.rs  mbedtls.rs  mod.rs  openssl.rs  rand.rs  rustcrypto.rs
rs-matter/src/data_model/: basic_info.rs  cluster_basic_information.rs  cluster_level_control.rs  cluster_media_playback.rs  cluster_on_off.rs  cluster_template.rs  cluster_window_covering.rs  clusters.rs  core.rs  device_types.rs  mod.rs  on_off.matter  on_off.rs  root_endpoint.rs  subscriptions.rs  unit_testing.rs
rs-matter/src/dm/: basic_info.rs  clusters.rs  core.rs  device_types.rs  devices.rs  endpoints.rs  events.rs  mod.rs  networks.rs  on_off.rs  root_endpoint.rs  subscriptions.rs  types.rs  unit_testing.rs
rs-matter/src/im/: attr.rs  busy.rs  client.rs  encoding.rs  event.rs  events.rs  expand.rs  (+8 more)
rs-matter/tests/: bdx.rs  case.rs  commissioning.rs  data_model_tests.rs  diag_logs.rs  exchange.rs  im_revision.rs  im_tests.rs  macro_bench.rs  pase.rs  tlv_encoding.rs
tools/tlv/: Cargo.toml  README.md
tools/tlv_tool/: Cargo.toml  README.md
xtask/: Cargo.toml  README.md
xtask/scripts/: no_fail_on_skipped.py  no_pase_setup_class_helper.py
xtask/src/: commissioningtest.rs  common.rs  copyright.rs  exchangetest.rs  imtest.rs  itest.rs  main.rs  mdnstest.rs  pasetest.rs  tlv.rs
(+509 files in other folders)
