[workspace]
resolver = "2"
members = [
        "rs-matter",
        "rs-matter-data-model",
        "rs-matter-macros",
        "rs-matter-macros-impl",
        "examples",
]

exclude = ["tools/tlv"]

[profile.release]
opt-level = "z"

[profile.dev]
debug = true
opt-level = "z"

[profile.flamegraph]
inherits = "release"
debug = true
