[workspace]
resolver = "2"
members = [
        "rs-matter",
        "rs-matter-macros",
        "examples",
]

exclude = ["tools/tlv", "xtask"]

[profile.dev]
debug = true
# opt-level = "z"

[profile.release]
opt-level = "z"
debug = 0
debug-assertions = false
codegen-units = 1 # LLVM can perform better optimizations using a single thread
lto = "fat"
incremental = false
overflow-checks = false
