[workspace]
resolver = "2"
members = [
        "rs-matter",
        "rs-matter-macros",
        "rs-matter-codegen",
        "examples",
]

exclude = ["bloat-check", "xtask"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Kedar Sovani <kedars@gmail.com>", "Ivan Markov", "Project CHIP Authors"]
description = "Native Rust implementation of the Matter (Smart-Home) ecosystem"
repository = "https://github.com/project-chip/rs-matter"
readme = "README.md"
keywords = ["matter", "smart", "smart-home", "IoT"]
categories = ["embedded", "network-programming"]
license = "Apache-2.0"
rust-version = "1.87"

[profile.dev]
debug = true
# opt-level = "z"

[profile.release]
opt-level = "z"
debug = 0
debug-assertions = false
codegen-units = 1 # LLVM can perform better optimizations using a single thread
lto = "fat"
incremental = false
overflow-checks = false
