[package]
name = "rs-matter-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "onoff_light"

[[bin]]
name = "onoff_light_switch"

[[bin]]
name = "onoff_light_bt"
required-features = ["zbus"]

[[bin]]
name = "onoff_light_work_stealing"
required-features = ["sync-mutex"]

[[bin]]
name = "speaker"

[[bin]]
name = "media_player"

[[bin]]
name = "bridge"

[[bin]]
name = "camera_tests"

[[bin]]
name = "system_tests"

[[bin]]
name = "commissioner_tests"

[[bin]]
name = "dimmable_light"

[[bin]]
name = "scenes_tests"

[[bin]]
name = "webrtc_camera"
required-features = ["webrtc"]

[features]
default = ["log"]
log = []
mbedtls = ["rs-matter/mbedtls"]
openssl = ["rs-matter/openssl"]
sync-mutex = ["rs-matter/sync-mutex"]
zbus = ["rs-matter/zbus"]
astro-dnssd = ["rs-matter/astro-dnssd"]
zeroconf = ["rs-matter/zeroconf"]
avahi = ["rs-matter/zbus"]
resolve = ["rs-matter/zbus"]
test-tcp = ["rs-matter/large-buffers"]
# Temporary fix for unexpected cfgs lint
defmt = []
# Enables the `webrtc_camera` example that bridges a WebRTC peer to a
# Matter-spec WebRTC Transport Provider cluster via `str0m`.
webrtc = [
    "dep:str0m",
    "dep:async-channel",
    "dep:tracing",
    "dep:tracing-subscriber",
    "rs-matter/large-buffers",
]

[dependencies]
log = "0.4"
env_logger = "0.11"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log"], optional = true }
embassy-futures = "0.1"
embassy-sync = "0.8"
embassy-time = { version = "0.5", features = ["std"] }
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
static_cell = "1"
if-addrs = "0.15"
async-io = "2"
async-compat = "0.2"
blocking = "1"
futures-lite = "2"
rs-matter = { path = "../rs-matter", features = ["async-io", "max-groups-per-fabric-12", "max-group-keys-per-fabric-2", "max-group-endpoints-per-fabric-3", "max-sessions-32"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
async-signal = "0.2"
socket2 = "0.5"
async-executor = "1"
async-channel = { version = "2", optional = true }
str0m = { version = "0.18", optional = true }

# The `webrtc` feature pulls `str0m` -> `dimpl` -> `rcgen`, and `rcgen` 0.14.8
# fails to compile against `time` >= 0.3.48 (a coherence regression in that
# `time` release: its associated-type-projected `From<HourBase>` impl spuriously
# conflicts with `rcgen`'s blanket `impl<T: Into<String>> From<T> for ...`). We
# don't control `rcgen`, so constrain `time` below 0.3.48 here. This is
# examples-only (`rs-matter` itself doesn't depend on `str0m`/`rcgen`). Remove
# once `rcgen`/`time` resolve the conflict upstream.
time = { version = ">=0.3, <0.3.48", default-features = false }
