[package]
name = "matter-idl-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
miette.workspace = true
nom.workspace = true
nom-greedyerror.workspace = true
nom-supreme.workspace = true
nom_locate.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

matter-data-model={path = "../matter-data-model"}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
divan = "0.1.4"
rstest = "0.18.2"

[[bench]]
name="client-clusters"
harness=false

[[bench]]
name = "client-clusters-criterion"
harness = false
