[package]
name = "rs-matter-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Native Rust implementation of the Matter (Smart-Home) ecosystem - IDL parser and code generation"
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"
miette = { version = "7", features = ["fancy"] }
nom = "7"
nom-greedyerror = "0.5"
nom-supreme = "0.8"
nom_locate = "4.2"
convert_case = "0.6"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
assert-tokenstreams-eq = "0.1.0"
rstest = "0.18.2"
tracing-subscriber = { version = "0.3", features = ["regex", "json"] }
