[package]
name = "rs-matter-data-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "5", features = ["fancy"] }
nom = "7"
nom-greedyerror = "0.5"
nom-supreme = "0.8"
nom_locate = "4.2"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["regex", "json"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
divan = "0.1.4"
rstest = "0.18.2"

[[bench]]
name = "client-clusters"
harness = false

[[bench]]
name = "client-clusters-criterion"
harness = false
