[package]
name = "rs-matter-macros-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
rs-matter-data-model = { path = "../rs-matter-data-model" }
syn = { version = "2", features = ["extra-traits", "parsing", "proc-macro"] }
proc-macro2 = "1"
convert_case = "0.6"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert-tokenstreams-eq = "0.1.0"
