[package]
name = "rs-matter-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Native Rust implementation of the Matter (Smart-Home) ecosystem - proc-macros"
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"

[dev-dependencies]
assert-tokenstreams-eq = "0.1"
rstest = "0.18.2"
